# cookiecutter-pypackage-minimal

./: README.md  cookiecutter.json  mkdocs.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/docs/: api.md  index.md  installation.md  usage.md
{{cookiecutter.project_slug}}/hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
